--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
     uses: yiisoft/actions/.github/workflows/phpunit.yml@master
     with:
       # coverage: pcov / coverage: xdebug / coverage: xdebug2 / coverage: none 
-      # extensions: pdo, pdo_pgsql
+      extensions: swoole-5.0.0
       # ini-values: date.timezone='UTC'      
       os: >-
-        ['ubuntu-latest', 'windows-latest']
+        ['ubuntu-latest']
       php: >-
         ['8.0', '8.1']
       #tools: composer:v
