--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0",
-        "ext-swoole": "^4.0|^5.0",
+        "ext-swoole": "^4.8|^5.0",
         "psr/http-message": "^1.0",
         "nyholm/psr7": "^1.5"
     },
@@ -34,6 +34,7 @@
     },
     "scripts": {
         "lint": "php-cs-fixer fix --config .php-cs-fixer.php src tests",
+        "psalm": "psalm",
         "test": "phpunit"
     }
 }
