--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,5 +25,8 @@
         <include>
             <directory>./src</directory>
         </include>
+        <report>
+            <clover outputFile="coverage.xml"/>
+        </report>
     </coverage>
 </phpunit>
