--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require-dev": {
         "swoole/ide-helper": "^5.0",
         "phpunit/phpunit": "^9.5",
-        "friendsofphp/php-cs-fixer": "^3.11"
+        "razonyang/unit-helper": "^1.0"
     },
     "scripts": {
         "lint": "php-cs-fixer fix --config .php-cs-fixer.php src tests",
