Update build configuration

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,7 +16,7 @@
     </php>
 
     <testsuites>
-        <testsuite name="Yii _____ tests">
+        <testsuite name="unit tests">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
@@ -26,7 +26,8 @@
             <directory>./src</directory>
         </include>
         <report>
-            <clover outputFile="coverage.xml"/>
+            <clover outputFile="build/coverage.xml"/>
+            <html outputDirectory="build/coverage"/>
         </report>
     </coverage>
 </phpunit>
