--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,2 @@
-coverage_clover: coverage.xml
-json_path: coveralls-upload.json
+coverage_clover: build/coverage.xml
+json_path: build/coveralls-upload.json
