--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,6 +10,7 @@ build:
     before:
       - sudo apt update
       - sudo apt upgrade -f -s
+      - openssl version
 
   environment:
     php:
@@ -17,7 +18,7 @@ build:
       ini:
         "xdebug.mode": coverage
       pecl_extensions:
-        - swoole-5.0.0
+        - swoole
 
   nodes:
     analysis:
